# QUT_ROVER_OCR

./: README.md  Untitled-1.py
Rover_OCR_Node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Rover_OCR_Node/install/rover_ocr_node/lib/rover_ocr_node/: rover_ocr
Rover_OCR_Node/install/rover_ocr_node/share/rover_ocr_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Rover_OCR_Node/src/rover_ocr_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Rover_OCR_Node/src/rover_ocr_node/rover_ocr_node/: rover_ocr.py
